docs(vue): 更新 Vue Router 相关文档
- 新增 Vue Router 4.x 版本文档
- 更新侧边栏导航结构
- 添加 Element Plus 和 Quill 相关文档
- 重命名部分文件以适应新结构

--- a/src/vue/router/v3.md
+++ b/src/vue/router/v3.md
@@ -1,22 +1,18 @@
-# 在 Vue2 中使用 Vue Router
+# Vue Router 3.x
 
 ## Vue Router 简介
 
 Vue Router 是 Vue.js 官方的路由管理器，它与 Vue.js 的核心深度集成，让构建单页面应用变得易如反掌。它包含的功能有：
 
-- 声明式路由：使用 `<router-link>` 组件创建导航链接
-- 编程式导航：通过 JavaScript 实现页面跳转
-- 嵌套的路由/视图表：支持多层嵌套的路由结构
+- 嵌套的路由/视图表
 - 模块化的、基于组件的路由配置
-- 动态路由匹配：支持动态路径参数、查询、通配符
-- 命名路由和命名视图：便于路由管理和组件渲染
 - 路由参数、查询、通配符
 - 基于 Vue.js 过渡系统的视图过渡效果
-- 细粒度的导航控制：提供多种方式的导航控制
+- 细粒度的导航控制
 - 带有自动激活的 CSS class 的链接
-- HTML5 历史模式或 hash 模式
-- 可扩展的路由配置
-- 路由懒加载：优化应用性能
+- HTML5 历史模式或 hash 模式，在 IE9 中自动降级
+- 自定义的滚动条行为
+
 
 
 ## 下载安装
@@ -247,75 +243,7 @@ const router = new VueRouter({
 
 需要在服务端增加一个覆盖所有情况的候选资源：如果 URL 匹配不到任何静态资源，则应该返回同一个 index.html 页面。
 
-#### 服务器配置示例
-
-**nginx**
-
-```nginx
-location / {
-  try_files $uri $uri/ /index.html;
-}
-```
-
-**Apache**
-
-```
-<IfModule mod_negotiation.c>
-  Options -MultiViews
-</IfModule>
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteBase /
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
-</IfModule>
-```
-
-**原生 Node.js**
-
-```js
-const http = require('http')
-const fs = require('fs')
-const httpPort = 80
-
-http.createServer((req, res) => {
-  fs.readFile('index.html', 'utf-8', (err, content) => {
-    if (err) {
-      console.log('We cannot open "index.html" file.')
-    }
-
-    res.writeHead(200, {
-      'Content-Type': 'text/html; charset=utf-8'
-    })
-
-    res.end(content)
-  })
-}).listen(httpPort, () => {
-  console.log('Server listening on: http://localhost:%s', httpPort)
-})
-```
-
-#### Express
-
-可以使用 [`connect-history-api-fallback`](https://github.com/bripkens/connect-history-api-fallback) 模块，将所有请求都映射到 `index.html` 文件。
-
-安装：
-```sh
-npm install --save connect-history-api-fallback
-pnpm add connect-history-api-fallback
-yarn add connect-history-api-fallback
-```
-
-使用：
-```js
-const express = require('express');
-const history = require('connect-history-api-fallback');
-
-const app = express();
-app.use(history());
-```
+关于服务器配置的详细示例，请查看 [Vue Router 服务器配置示例](./server-config.md)。
 
 ### Abstract 模式
 
