docs(router): 补充 404 路由配置并优化路由匹配文档
- 在 server-config.md 中添加 404 错误处理的注意事项和解决方案
- 在 v4.md 中扩展动态路由匹配的内容，包括正则、可重复参数等高级用法
- 更新示例代码以演示如何在 Vue 2 和 Vue 3 中实现 404 页面
- 添加敏感和严格路由配置的说明，以及可选参数的使用示例

--- a/src/vue/router/v4.md
+++ b/src/vue/router/v4.md
@@ -90,14 +90,71 @@ app.mount('#app')
 
 ### 动态路由匹配
 
+正则：
 ```js
 const routes = [
   // 动态路径参数以冒号开头
-  { path: '/user/:id', component: User },
+  { path: '/:orderId' },
   // /:orderId -> 仅匹配数字
   { path: '/:orderId(\\d+)' },
-  // 匹配所有路径
-  { path: '/:pathMatch(.*)*', name: 'NotFound', component: NotFound },
+  // 匹配所有路径，通常用于 404 页面
+  { path: '/:pathMatch(.*)*' },
+]
+```
+
+可重复参数：
+
+```js
+const routes = [
+  // /:chapters ->  匹配 /one, /one/two, /one/two/three, 等
+  { path: '/:chapters+' },
+  // /:chapters -> 匹配 /, /one, /one/two, /one/two/three, 等
+  { path: '/:chapters*' },
+]
+
+// 给定 { path: '/:chapters*', name: 'chapters' },
+router.resolve({ name: 'chapters', params: { chapters: [] } }).href
+// 产生 /
+router.resolve({ name: 'chapters', params: { chapters: ['a', 'b'] } }).href
+// 产生 /a/b
+
+// 给定 { path: '/:chapters+', name: 'chapters' },
+router.resolve({ name: 'chapters', params: { chapters: [] } }).href
+// 抛出错误，因为 `chapters` 为空
+
+
+// 仅匹配数字
+const routes = [
+  // 匹配 /1, /1/2, 等
+  { path: '/:chapters(\\d+)+' },
+  // 匹配 /, /1, /1/2, 等
+  { path: '/:chapters(\\d+)*' },
+]
+```
+
+[Sensitive 与 strict](https://router.vuejs.org/zh/guide/essentials/route-matching-syntax.html#Sensitive-%E4%B8%8E-strict-%E8%B7%AF%E7%94%B1%E9%85%8D%E7%BD%AE): 
+```js
+const router = createRouter({
+  history: createWebHistory(),
+  routes: [
+    // 将匹配 /users/posva 而非：
+    // - /users/posva/ 当 strict: true
+    // - /Users/posva 当 sensitive: true
+    { path: '/users/:id', sensitive: true },
+    // 将匹配 /users, /Users, 以及 /users/42 而非 /users/ 或 /users/42/
+    { path: '/users/:id?' },
+  ],
+  strict: true, // applies to all routes
+})
+```
+
+可选参数：
+```js
+const routes = [
+  // 匹配 /users 和 /users/posva
+  { path: '/users/:userId?' },
+  // 匹配 /users 和 /users/42
+  { path: '/users/:userId(\\d+)?' },
 ]
 ```
 
@@ -447,4 +504,3 @@ const router = createRouter({
 
 - [Vue Router 4 官方文档](https://router.vuejs.org/zh/)
 - [Vue 3 官方文档](https://vuejs.org/)
-- [Vue CLI](https://cli.vuejs.org/)
