docs(vue): 添加 KeepAlive 组件文档并更新相关章节
- 新增 KeepAlive 组件的详细使用说明
- 在 sidebar 中添加 KeepAlive 相关链接
- 更新 Vue Router 4 文档，添加 KeepAlive 与 Transition 结合使用的示例

--- a/src/vue/router/v4.md
+++ b/src/vue/router/v4.md
@@ -500,6 +500,34 @@ const router = createRouter({
 })
 ```
 
+### 结合 Transition 和 KeepAlive {#keep-alive-transition}
+
+这样可以实现动画过渡和缓存的效果。
+
+```vue
+<script setup>
+const cacheList = ref([ /* ... */ ])
+const transitionName = ref('')
+
+// 获取缓存的 key
+const getKey = (route) => {
+  // 根据的项目需要，可自定义实现
+  return route.fullPath
+}
+</script>
+
+<template>
+  <RouterView v-slot="{ Component, route }">
+    <Transition :name="transitionName" appear mode="out-in">
+      <KeepAlive :include="cacheList">
+        <component :is="Component" :key="getKey(route)" />
+      </KeepAlive>
+    </Transition>
+  </RouterView>
+</template>
+```
+
+
 ## 相关链接
 
 - [Vue Router 4 官方文档](https://router.vuejs.org/zh/)
